Adding in sample presentation

--- a/slides/7.md
+++ b/slides/7.md
@@ -8,7 +8,7 @@ var my_true_bool = true,
 	my_string = '',
 	my_object = {};
 
-console.log(my_null && my_true);
-console.log(my_string && my_true);
-console.log(my_object && my_true);
+console.log(my_null && my_true_bool);
+console.log(my_string && my_true_bool);
+console.log(my_object && my_true_bool);
 ```
